parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@subscript.py-2.snap
---
source: parser/src/parser/parser.rs
description: "values = list_of_key_stats[1::2]"
input_file: parser/test_data/inputs/one_liners/subscript.py
---
Module {
    node: Node {
        start: 0,
        end: 32,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 32,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 6,
                            },
                            id: "values",
                        },
                    ),
                ],
                value: Subscript(
                    Subscript {
                        node: Node {
                            start: 9,
                            end: 32,
                        },
                        value: Name(
                            Name {
                                node: Node {
                                    start: 9,
                                    end: 26,
                                },
                                id: "list_of_key_stats",
                            },
                        ),
                        slice: Slice(
                            Slice {
                                node: Node {
                                    start: 28,
                                    end: 31,
                                },
                                lower: Some(
                                    Constant(
                                        Constant {
                                            node: Node {
                                                start: 27,
                                                end: 28,
                                            },
                                            value: Int(
                                                "1",
                                            ),
                                        },
                                    ),
                                ),
                                upper: None,
                                step: Some(
                                    Constant(
                                        Constant {
                                            node: Node {
                                                start: 30,
                                                end: 31,
                                            },
                                            value: Int(
                                                "2",
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    ],
}
