parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@subscript.py.snap
---
source: parser/src/parser/parser.rs
description: "indices = list_of_key_stats[0::2]"
input_file: parser/test_data/inputs/one_liners/subscript.py
---
Module {
    node: Node {
        start: 0,
        end: 33,
    },
    body: [
        AssignStatement(
            Assign {
                node: Node {
                    start: 0,
                    end: 33,
                },
                targets: [
                    Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 7,
                            },
                            id: "indices",
                        },
                    ),
                ],
                value: Subscript(
                    Subscript {
                        node: Node {
                            start: 10,
                            end: 33,
                        },
                        value: Name(
                            Name {
                                node: Node {
                                    start: 10,
                                    end: 27,
                                },
                                id: "list_of_key_stats",
                            },
                        ),
                        slice: Slice(
                            Slice {
                                node: Node {
                                    start: 29,
                                    end: 32,
                                },
                                lower: Some(
                                    Constant(
                                        Constant {
                                            node: Node {
                                                start: 28,
                                                end: 29,
                                            },
                                            value: Int(
                                                "0",
                                            ),
                                        },
                                    ),
                                ),
                                upper: None,
                                step: Some(
                                    Constant(
                                        Constant {
                                            node: Node {
                                                start: 31,
                                                end: 32,
                                            },
                                            value: Int(
                                                "2",
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    ],
}
