parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@with.py-6.snap
---
source: parser/src/parser/parser.rs
description: "async with a as b, c as d:\n    pass"
input_file: parser/test_data/inputs/one_liners/with.py
---
Module {
    node: Node {
        start: 0,
        end: 35,
    },
    body: [
        AsyncWithStatement(
            AsyncWith {
                node: Node {
                    start: 0,
                    end: 35,
                },
                items: [
                    WithItem {
                        node: Node {
                            start: 11,
                            end: 17,
                        },
                        context_expr: Name(
                            Name {
                                node: Node {
                                    start: 11,
                                    end: 12,
                                },
                                id: "a",
                            },
                        ),
                        optional_vars: Some(
                            Name(
                                Name {
                                    node: Node {
                                        start: 16,
                                        end: 17,
                                    },
                                    id: "b",
                                },
                            ),
                        ),
                    },
                    WithItem {
                        node: Node {
                            start: 19,
                            end: 25,
                        },
                        context_expr: Name(
                            Name {
                                node: Node {
                                    start: 19,
                                    end: 20,
                                },
                                id: "c",
                            },
                        ),
                        optional_vars: Some(
                            Name(
                                Name {
                                    node: Node {
                                        start: 24,
                                        end: 25,
                                    },
                                    id: "d",
                                },
                            ),
                        ),
                    },
                ],
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 31,
                                end: 35,
                            },
                        },
                    ),
                ],
            },
        ),
    ],
}
