parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@with.py-7.snap
---
source: parser/src/parser/parser.rs
description: "async with (\n        a as b, c as d\n):\n    a = 1\n"
input_file: parser/test_data/inputs/one_liners/with.py
---
Module {
    node: Node {
        start: 0,
        end: 49,
    },
    body: [
        AsyncWithStatement(
            AsyncWith {
                node: Node {
                    start: 0,
                    end: 49,
                },
                items: [
                    WithItem {
                        node: Node {
                            start: 21,
                            end: 27,
                        },
                        context_expr: Name(
                            Name {
                                node: Node {
                                    start: 21,
                                    end: 22,
                                },
                                id: "a",
                            },
                        ),
                        optional_vars: Some(
                            Name(
                                Name {
                                    node: Node {
                                        start: 26,
                                        end: 27,
                                    },
                                    id: "b",
                                },
                            ),
                        ),
                    },
                    WithItem {
                        node: Node {
                            start: 29,
                            end: 35,
                        },
                        context_expr: Name(
                            Name {
                                node: Node {
                                    start: 29,
                                    end: 30,
                                },
                                id: "c",
                            },
                        ),
                        optional_vars: Some(
                            Name(
                                Name {
                                    node: Node {
                                        start: 34,
                                        end: 35,
                                    },
                                    id: "d",
                                },
                            ),
                        ),
                    },
                ],
                body: [
                    AssignStatement(
                        Assign {
                            node: Node {
                                start: 43,
                                end: 48,
                            },
                            targets: [
                                Name(
                                    Name {
                                        node: Node {
                                            start: 43,
                                            end: 44,
                                        },
                                        id: "a",
                                    },
                                ),
                            ],
                            value: Constant(
                                Constant {
                                    node: Node {
                                        start: 47,
                                        end: 48,
                                    },
                                    value: 1,
                                },
                            ),
                        },
                    ),
                ],
            },
        ),
    ],
}
