parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@with.py.snap
---
source: parser/src/parser/parser.rs
description: "with a: pass"
input_file: parser/test_data/inputs/one_liners/with.py
---
Module {
    node: Node {
        start: 0,
        end: 12,
    },
    body: [
        WithStatement(
            With {
                node: Node {
                    start: 0,
                    end: 12,
                },
                items: [
                    WithItem {
                        node: Node {
                            start: 5,
                            end: 6,
                        },
                        context_expr: Name(
                            Name {
                                node: Node {
                                    start: 5,
                                    end: 6,
                                },
                                id: "a",
                            },
                        ),
                        optional_vars: None,
                    },
                ],
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 8,
                                end: 12,
                            },
                        },
                    ),
                ],
            },
        ),
    ],
}
